// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Hits render a custom hit 1`] = `
<ul
  className="list"
>
  <li
    className="item"
    key="0"
  >
    <div
      id={0}
    />
  </li>
  <li
    className="item"
    key="1"
  >
    <div
      id={1}
    />
  </li>
  <li
    className="item"
    key="2"
  >
    <div
      id={2}
    />
  </li>
</ul>
`;

exports[`Hits render the default hit 1`] = `
<ul
  className="list"
>
  <li
    className="item"
    key="0"
  >
    <div
      style={
        Object {
          "borderBottom": "1px solid #bbb",
          "marginBottom": "5px",
          "paddingBottom": "5px",
          "wordBreak": "break-all",
        }
      }
    >
      {"objectID":0}
      ...
    </div>
  </li>
  <li
    className="item"
    key="1"
  >
    <div
      style={
        Object {
          "borderBottom": "1px solid #bbb",
          "marginBottom": "5px",
          "paddingBottom": "5px",
          "wordBreak": "break-all",
        }
      }
    >
      {"objectID":1}
      ...
    </div>
  </li>
  <li
    className="item"
    key="2"
  >
    <div
      style={
        Object {
          "borderBottom": "1px solid #bbb",
          "marginBottom": "5px",
          "paddingBottom": "5px",
          "wordBreak": "break-all",
        }
      }
    >
      {"objectID":2}
      ...
    </div>
  </li>
</ul>
`;
